2003-04-16  Jakub Jelinek  <jakub@redhat.com>

	* tst-cancel4.c (do_test): Use %zd instead of %d when printing cnt.

2003-04-15  Roland McGrath  <roland@redhat.com>

	* forward.c (__pthread_unwind): Tweak to avoid warning.

2003-04-15  Ulrich Drepper  <drepper@redhat.com>

	* pthreadP.h: Move THREAD_ATOMIC_* replacements to the top.

2003-04-14  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S: Don't
	overflow CFA advance instructions.
	* sysdeps/unix/sysv/linux/x86_64/pthread_cond_timedwait.S: Likewise.

2003-04-14  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/i386/tls.h: Rename LOCK to LOCK_PREFIX.
	* sysdeps/i386/pthread_spin_lock.c: Likewise.
	* sysdeps/x86_64/tls.h: Likewise.  Define LOCK_PREFIX if not already
	defined.

	* sysdeps/unix/sysv/linux/i386/i486/pthread_cond_timedwait.S: Use
	DW_CFA_advance_loc2 for .Laddl-.Lsubl.
	* sysdeps/unix/sysv/linux/i386/i486/pthread_cond_wait.S: Use
	DW_CFA_advance_loc for .Laddl-.Lsubl.

2003-04-13  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/i386/sysdep-cancel.h: Don't use
	position-independent unwind data for static libraries.
	Add missing unwind info.  Add comments.

	* sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S: Add unwind info.
	* sysdeps/unix/sysv/linux/x86_64/pthread_cond_timedwait.S: Likewise.
	* sysdeps/unix/sysv/linux/i386/i486/pthread_cond_wait.S: Likewise.
	* sysdeps/unix/sysv/linux/i386/i486/pthread_cond_timedwait.S: Likewise.

2003-04-12  Ulrich Drepper  <drepper@redhat.com>

	* Makefile: Make sure all cancellation points are compiled with
	exception and asynchronous unwind tables.

	* sysdeps/x86_64/tls.h (THREAD_SETMEM): Word around compiler bug
	which mishandles loading of global object addresses in PIC.
	(THREAD_SETMEM_NC): Likewise.

2003-04-11  Ulrich Drepper  <drepper@redhat.com>

	* pthread.h: Define new data structure for cleanup buffer.  Declare
	new cleanup handler interfaces.